--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h3{
   color:#03A9F4;
 }
 h3{
+  font-size:100px;
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
