--- a/style.css
+++ b/style.css
@@ -39,9 +39,14 @@ body{
   right:30px;
   
 }
-h3{
+h4{
   font-size:100px;
   color:#03A9F4;
+  font-family: "Anta", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 }
 h3{
   font-size:100px;
